--- a/src/app/components/language/language-selector/language-selector.component.html
+++ b/src/app/components/language/language-selector/language-selector.component.html
@@ -1,6 +1,6 @@
 <div class="form-group">
   <select class="form-control" [(ngModel)]="value">
-      <option *ngFor="let language of languageService.availableLanguages()" [ngValue]="language">
+      <option *ngFor="let language of availableLanguages()" [ngValue]="language">
           {{language.name}}
         </option>
   </select>
